# vii

./: .gitignore  README.md  flake.nix  vii.cabal
app/: Main.hs
src/Data/Maybe/: X.hs
src/IBus/: Address.hs  Attribute.hs  Common.hs  Engine.hs  Key.hs  Modifier.hs  Text.hs
src/IBusVii/: App.hs  Engine.hs  PreeditText.hs  Word32.hs
src/IBusVii/App/: Env.hs  Log.hs  Options.hs
src/System/: File.hs
src/Vii/: InputMethod.hs  ViSymbol.hs  ViWord.hs
src/Vii/ViWord/: Component.hs  Compose.hs  ComposeSymbol.hs  RemoveLastLetter.hs  Render.hs  Type.hs
test/Vii/: InputMethodSpec.hs  Test.hs
